@@ -1,5 +1,7 @@
 1.8.12.dev0
  * #860: Fix interaction between environment variable interpolation in constants and shell escaping.
+ * #863: When color output is disabled (explicitly or implicitly), don't prefix each log line with
+   the log level.
 
 1.8.11
  * #815: Add optional Healthchecks auto-provisioning via "create_slug" option.
